added jwt token and authorization
